--- a/Products/templates/products/category.html
+++ b/Products/templates/products/category.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-        <style>
+    <style>
         .pagination {
             display: flex;
             justify-content: center;
@@ -60,45 +60,48 @@
     <h2 class="text-lg font-DanaBold mb-4 border-b pb-2 mt-10">
         محصولات دسته‌بندی: {{ category.name }}
     </h2>
-
-    <div class="mt-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
-        {% for item in prod %}
-            <div class="group bg-white dark:bg-zinc-700 rounded-lg shadow overflow-hidden">
-                <a href="{% url 'products:detail_products' slug=item.slug %}">
-                    <img src="{{ item.image.url }}" alt="{{ item.name }}"
-                         class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3 object-contain"/>
-                </a>
-                <div class="px-2 lg:px-4 mb-3">
-                    <a href="{% url 'products:detail_products' slug=item.slug %}"
-                       class="line-clamp-2 font-DanaMedium mb-2 text-sm lg:text-base block">
-                        {{ item.name }}
-                    </a>
-                    <div class="flex items-center gap-x-1 lg:gap-x-3">
-                        <p class="font-DanaDemiBold text-green-600 dark:text-green-500">
-                            {{ item.discount_price|floatformat:0|intcomma }}
-                            <span class="font-Dana text-sm">تومان</span>
-                        </p>
-                        {% if item.price > item.discount_price %}
-                            <del class="text-xs text-rose-400 font-Dana">
-                                {{ item.price|floatformat:0|intcomma }}
-                            </del>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="flex items-center justify-start px-2 lg:px-4 mb-3">
+    <main class="container child:mt-8">
+        <div class="flex flex-col lg:flex-row gap-4 ">
+            <div class="mt-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
+                {% for item in prod %}
+                    <div class="group bg-white dark:bg-zinc-700 rounded-lg shadow overflow-hidden">
+                        <a href="{% url 'products:detail_products' slug=item.slug %}">
+                            <img src="{{ item.image.url }}" alt="{{ item.name }}"
+                                 class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3 object-contain"/>
+                        </a>
+                        <div class="px-2 lg:px-4 mb-3">
+                            <a href="{% url 'products:detail_products' slug=item.slug %}"
+                               class="line-clamp-2 font-DanaMedium mb-2 text-sm lg:text-base block">
+                                {{ item.name }}
+                            </a>
+                            <div class="flex items-center gap-x-1 lg:gap-x-3">
+                                <p class="font-DanaDemiBold text-green-600 dark:text-green-500">
+                                    {{ item.discount_price|floatformat:0|intcomma:False }}
+                                    <span class="font-Dana text-sm">تومان</span>
+                                </p>
+                                {% if item.price > item.discount_price %}
+                                    <del class="text-xs text-rose-400 font-Dana">
+                                        {{ item.price|floatformat:0|intcomma:False }}
+                                    </del>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="flex items-center justify-start px-2 lg:px-4 mb-3">
                 <span class="rounded-full p-2 dark:bg-zinc-800 dark:hover:bg-green-500 bg-gray-100 hover:bg-green-600 hover:text-white transition-all duration-300">
                     <svg class="w-4 h-4">
                         <use href="#shopping-cart"></use>
                     </svg>
                 </span>
-                </div>
+                        </div>
+                    </div>
+                {% empty %}
+                    <p class="col-span-full text-center text-gray-500 dark:text-gray-400 mt-8">
+                        محصولی در این دسته‌بندی یافت نشد.
+                    </p>
+                {% endfor %}
             </div>
-        {% empty %}
-            <p class="col-span-full text-center text-gray-500 dark:text-gray-400 mt-8">
-                محصولی در این دسته‌بندی یافت نشد.
-            </p>
-        {% endfor %}
-    </div>
+        </div>
+    </main>
     <!-- PAGINATION -->
     {% if page_obj.has_other_pages %}
         <div class="pagination">
