index on main: 97abd24 main

--- a/Template/include/footer.html
+++ b/Template/include/footer.html
@@ -52,7 +52,7 @@
                             <a href="{% url 'products:shop' %}">فروشگاه</a>
                         </li>
                         <li>
-{#                            <a href="{% url 'account:contact_us' %}">تماس با ما </a>#}
+                            <a href="{% url 'account:contact_us' %}">تماس با ما </a>
                         </li>
                     </ul>
                     <ul class="child-hover:text-green-500 child:transition-colors">
