--- a/Template/include/header.html
+++ b/Template/include/header.html
@@ -158,8 +158,8 @@
                 </li>
 
 
-{#                <li class="nav-item {% if request.resolver_match.url_name == 'contact_us' %} text-green-500{% endif %}">#}
-{#                    <a href="{% url 'account:contact_us' %}">تماس با ما</a>#}
+                <li class="nav-item {% if request.resolver_match.url_name == 'contact_us' %} text-green-500{% endif %}">
+                    <a href="{% url 'account:contact_us' %}">تماس با ما</a>
                 </li>
                 <li class="nav-item {% if request.resolver_match.url_name == 'about' %} text-green-500{% endif %}">
                     <a href="{% url 'products:about' %}">درباره ما</a>
