--- a/Products/templates/products/product_detail.html
+++ b/Products/templates/products/product_detail.html
@@ -323,44 +323,55 @@
                 </div>
             </div>
             <!-- PRICE & ADD TO CART BOX -->
-            <div class="w-full lg:w-1/4 lg:sticky top-5 flex flex-col gap-y-6">
-                <!-- PRICE -->
-                <div class="flex items-center gap-x-1">
-                    <p class="text-2xl font-DanaDemiBold" id="unitPrice"
-                       data-price="{{ products.discount_price |floatformat | intcomma }}">
-                        {{ products.discount_price | floatformat | intcomma }}
-                    </p>
-                    <p>تومان</p>
+            <form method="post" class="w-full lg:w-1/4 lg:sticky top-5 flex flex-col gap-y-6">
+                {% csrf_token %}
+                <div class="top-5 flex flex-col gap-y-6" >
+                    <!-- PRICE -->
+                    <div class="flex items-center gap-x-1">
+                        <p class="text-2xl font-DanaDemiBold" id="unitPrice"
+                           data-price="{{ products.discount_price |floatformat | intcomma:False }}">
+                            {{ products.discount_price | floatformat | intcomma:False }}
+                        </p>
+                        <p>تومان</p>
+                    </div>
+
+                    <!-- تعداد -->
+                    <button
+                            class="w-full flex items-center justify-between gap-x-1 rounded-lg border border-gray-200 dark:border-white/20 py-2 px-3">
+                        <svg class="w-6 h-6 increment text-green-600">
+                            <use href="#plus"></use>
+                        </svg>
+                        <input type="number" name="quantity" id="quantity" min="1" max="20" value="1"
+                               class="custom-input mr-4 text-lg bg-transparent">
+                        <svg class="w-6 h-6 decrement text-red-500">
+                            <use href="#minus"></use>
+                        </svg>
+                    </button>
+
+                    <!-- مجموع خرید -->
+                    <button
+                            class="w-full flex items-center gap-x-1 justify-between dark:bg-zinc-800 dark:text-gray-400  bg-gray-100 transition-all rounded-lg py-2 px-2 xl:px-3 font-DanaMedium text-sm xl:text-base">
+                        <p>مجموع خرید :</p>
+                        <p id="totalPrice"> {{ products.discount_price|floatformat|intcomma:False }} تومان</p>
+                    </button>
+                    <button
+                            type="submit"
+                            class="w-full flex items-center gap-x-1 justify-center bg-green-500 text-white hover:bg-green-600 transition-all rounded-lg shadow py-2">
+                        افزودن به سبد خرید
+                        <svg class="w-5 h-5" {% url 'Cart:cart_add' products.id %}>
+                            <use href="#shopping-bag"></use>
+                        </svg>
+                    </button>
+
+                    <div class="text-sm  text-gray-400 flex xl:items-center gap-x-1">
+                        <svg class="w-5 h-5">
+                            <use href="#info"></use>
+                        </svg>
+                        <p>ارسال رایگان برای خریدهای بالای 400 هزار تومان</p>
+                    </div>
                 </div>
+            </form>
 
-                <!-- تعداد -->
-                <button
-                        class="w-full flex items-center justify-between gap-x-1 rounded-lg border border-gray-200 dark:border-white/20 py-2 px-3">
-                    <svg class="w-6 h-6 increment text-green-600">
-                        <use href="#plus"></use>
-                    </svg>
-                    <input type="number" name="customInput" id="customInput" min="1" max="20" value="1"
-                           class="custom-input mr-4 text-lg bg-transparent">
-                    <svg class="w-6 h-6 decrement text-red-500">
-                        <use href="#minus"></use>
-                    </svg>
-                </button>
-
-                <!-- مجموع خرید -->
-                <button
-                        class="w-full flex items-center gap-x-1 justify-between dark:bg-zinc-800 dark:text-gray-400  bg-gray-100 transition-all rounded-lg py-2 px-2 xl:px-3 font-DanaMedium text-sm xl:text-base">
-                    <p>مجموع خرید :</p>
-                    <p id="totalPrice"> {{ products.discount_price|floatformat|intcomma }} تومان</p>
-                </button>
-
-
-                <div class="text-sm  text-gray-400 flex xl:items-center gap-x-1">
-                    <svg class="w-5 h-5">
-                        <use href="#info"></use>
-                    </svg>
-                    <p>ارسال رایگان برای خریدهای بالای 400 هزار تومان</p>
-                </div>
-            </div>
         </section>
         <!-- COMMENTS -->
         <section class="w-full rounded-lg bg-white dark:bg-zinc-700 shadow p-5">
@@ -451,42 +462,42 @@
     </main>
 {% endblock %}
 {% block script %}
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const input = document.getElementById("customInput");
-            const totalPrice = document.getElementById("totalPrice");
-            const unitPrice = parseInt(document.getElementById("unitPrice").dataset.price);
-
-            function formatNumber(num) {
-                return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-            }
-
-            function updateTotal() {
-                const count = parseInt(input.value) || 1;
-                const total = count * unitPrice;
-                totalPrice.innerText = formatNumber(total) + " تومان";
-            }
-
-            input.addEventListener("change", updateTotal);
-            input.addEventListener("input", updateTotal);
-
-            document.querySelector(".increment").addEventListener("click", function () {
-                if (input.value < 20) {
-                    input.value = parseInt(input.value) + 1;
-                    updateTotal();
-                }
-            });
-
-            document.querySelector(".decrement").addEventListener("click", function () {
-                if (input.value > 1) {
-                    input.value = parseInt(input.value) - 1;
-                    updateTotal();
-                }
-            });
-
-            updateTotal(); // محاسبه اولیه
-        });
-    </script>
+{#    <script>#}
+{#        document.addEventListener("DOMContentLoaded", function () {#}
+{#            const input = document.getElementById("customInput");#}
+{#            const totalPrice = document.getElementById("totalPrice");#}
+{#            const unitPrice = parseInt(document.getElementById("unitPrice").dataset.price);#}
+{##}
+{#            function formatNumber(num) {#}
+{#                return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");#}
+{#            }#}
+{##}
+{#            function updateTotal() {#}
+{#                const count = parseInt(input.value) || 1;#}
+{#                const total = count * unitPrice;#}
+{#                totalPrice.innerText = formatNumber(total) + " تومان";#}
+{#            }#}
+{##}
+            {#input.addEventListener("change", updateTotal);#}
+            {#input.addEventListener("input", updateTotal);#}
+{##}
+{#            document.querySelector(".increment").addEventListener("click", function () {#}
+{#                if (input.value < 20) {#}
+{#                    input.value = parseInt(input.value) + 1;#}
+{#                    updateTotal();#}
+{#                }#}
+{#            });#}
+{##}
+{#            document.querySelector(".decrement").addEventListener("click", function () {#}
+{#                if (input.value > 1) {#}
+{#                    input.value = parseInt(input.value) - 1;#}
+{#                    updateTotal();#}
+{#                }#}
+{#            });#}
+{##}
+{#            updateTotal(); // محاسبه اولیه#}
+{#        });#}
+{#    </script>#}
 
 {% endblock %}
 
